addressing some layout issues

--- a/assets/style.css
+++ b/assets/style.css
@@ -78,3 +78,9 @@ iframe {
 .blur-img:hover :not(img) {
   opacity: 1;
 }
+
+@media screen and (max-width: 500px) {
+  .column {
+    width: 100%;
+  }
+}
